# configmerger-python

./: .travis.yml  README.md  configmerger.py  pyproject.toml  tasks.py
.github/workflows/: deploy.yml  main.yml  test.yml
tests/: test_helper.py  test_merge.py  test_real_example_media_organizer.py
