[tool.poetry]
name = "configmerger"
version = "0.1.1"
description = "merge multi level configurations"
authors = [ "Cologler <skyoflw@gmail.com>" ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Cologler/configmerger-python"

  [tool.poetry.dependencies]
  python = "^3.8"

  [tool.poetry.dev-dependencies]
  pytest = "^6.2.4"
  pytest-cov = "^2.12.1"
  pyinvoke = "^1.0.4"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning" ]
build-backend = "poetry.core.masonry.api"
